--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body
 	gap: 30px;
 }
 
-button  /* answer button */
+button
 {
 	width: 300px;
 	display: block;
@@ -57,7 +57,7 @@ button:hover
 
 
 
-#informacje /* informations about substitution */
+#informacje
 {
 	padding: 15px;
 	display: flex;
@@ -69,7 +69,7 @@ button:hover
 	border-radius: 10px;
 	color: rgb(255, 224, 224);
 }
-#definicja  /* substitution definition */
+#definicja
 {
 	display: block;
 	text-align: center;
@@ -77,7 +77,7 @@ button:hover
 	font-size: 25px;
 	color: rgb(255, 224, 224);
 }
-#przyklad   /* example */
+#przyklad
 {
 	display: block;
 	background-color: rgba(0, 0, 0, 0.2);
@@ -101,4 +101,8 @@ button:hover
 	text-align: center;
 	min-height: 30px;
 	color: white;
-}/* End of style.css */
+}
+
+
+
+/* Koniec pliku */
